<resources>
    <string name="app_name">BookDepository</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="book_title_hint">Введите название книги</string>
    <string name="book_title_label">Заголовок</string>
    <string name="book_details_label">Описание</string>
    <string name="book_readed_label">Прочтена?</string>
    <string name="date_picker_title">Дата начала прочтения:</string>
    <string name="new_book">Новая книга</string>
    <string name="show_subtitle">Показать подзаголовок</string>
    <string name="hide_subtitle">Скрыть подзаголовок</string>
    <string name="subtitle_format">%1$d книг</string>
    <string name="book_report_text">Отправить отчет о прочтении</string>
    <string name="book_report">%1$s Книга была запланирована к прочтению %2$s и %3$s</string>
    <string name="book_report_readed">Книга прочитана</string>
    <string name="book_report_unreaded">Книга не прочитана</string>
    <string name="book_report_subject">BookDepository отчет о прочтении</string>
    <string name="send_report">Отправить отчет о прочтении через</string>
    <string name="todo">TODO</string>

</resources>