<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/view_camera_and_title">

        </include>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_details_label"
            style="@android:style/Widget.Material"/>

        <Button
            android:id="@+id/book_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="#0038FF"
            android:padding="10dp"
            android:text="Button" />

        <CheckBox
            android:id="@+id/book_readed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/book_readed_label" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/book_report"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/book_report_text"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>